[gd_scene load_steps=8 format=3 uid="uid://dq6tvhqcy2aps"]

[ext_resource type="Script" uid="uid://d4gf4hgj6sbsq" path="res://addons/EasyMenus/Scripts/main_menu_controller.gd" id="1_lbw7r"]
[ext_resource type="FontFile" uid="uid://c6eaablg8a0gc" path="res://Resources/font.ttf" id="2_f4gee"]
[ext_resource type="PackedScene" uid="uid://qlskttl1wjr7" path="res://addons/EasyMenus/Scenes/options_menu.tscn" id="2_pwqpr"]
[ext_resource type="Texture2D" uid="uid://fya3iabpfmo" path="res://Resources/whitemug.png" id="4_bcxwf"]

[sub_resource type="Animation" id="Animation_bcxwf"]
resource_name = "float"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Whitemug:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 2.93333),
"transitions": PackedFloat32Array(0.554785, 0.307786, 1),
"update": 0,
"values": [Vector2(531.215, 203.24), Vector2(531, 149.43), Vector2(531, 211.7)]
}

[sub_resource type="Animation" id="Animation_ahamq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Whitemug:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(531, 267)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hv8pp"]
_data = {
&"RESET": SubResource("Animation_ahamq"),
&"float": SubResource("Animation_bcxwf")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lbw7r")

[node name="Content" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -184.0
offset_top = 407.0
offset_right = 166.0
offset_bottom = 668.0
grow_horizontal = 2
theme_override_constants/separation = 15
metadata/_edit_group_ = true

[node name="StartGameButton" type="Button" parent="Content"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../OptionsButton")
focus_next = NodePath("../OptionsButton")
focus_previous = NodePath("../QuitButton")
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2_f4gee")
theme_override_font_sizes/font_size = 30
text = "Start"

[node name="OptionsButton" type="Button" parent="Content"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../StartGameButton")
focus_neighbor_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../StartGameButton")
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2_f4gee")
theme_override_font_sizes/font_size = 30
text = "Options"

[node name="QuitButton" type="Button" parent="Content"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../OptionsButton")
focus_neighbor_bottom = NodePath("../StartGameButton")
focus_next = NodePath("../StartGameButton")
focus_previous = NodePath("../OptionsButton")
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2_f4gee")
theme_override_font_sizes/font_size = 30
text = "Quit"

[node name="OptionsMenu" parent="." instance=ExtResource("2_pwqpr")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="CoffeeCatch" type="Label" parent="."]
z_index = -100
layout_mode = 0
offset_left = 370.0
offset_top = 180.0
offset_right = 984.0
offset_bottom = 282.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.905882)
theme_override_constants/shadow_offset_x = -10
theme_override_constants/shadow_offset_y = 10
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 15
theme_override_fonts/font = ExtResource("2_f4gee")
theme_override_font_sizes/font_size = 80
text = "Coffee Catch"
horizontal_alignment = 1

[node name="info" type="Label" parent="."]
z_index = -100
layout_mode = 0
offset_left = 359.0
offset_top = 613.0
offset_right = 985.0
offset_bottom = 715.0
theme_override_colors/font_color = Color(0.811837, 0.811837, 0.811837, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.905882)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_f4gee")
theme_override_font_sizes/font_size = 36
text = "Check the Itch.io page or the README.txt 
for the tutorial and other things!"
horizontal_alignment = 1

[node name="info2" type="Label" parent="."]
z_index = -100
layout_mode = 0
offset_left = 367.0
offset_top = 704.0
offset_right = 993.0
offset_bottom = 806.0
theme_override_colors/font_color = Color(0.811837, 0.811837, 0.811837, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.905882)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_f4gee")
theme_override_font_sizes/font_size = 25
text = "Made for the 3 day Solo Gamejam 2025"
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -200
layout_mode = 0
offset_right = 1885.0
offset_bottom = 1029.0
mouse_filter = 2
color = Color(0.0588235, 0.317647, 0.572549, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
z_index = -200
layout_mode = 0
offset_left = 351.0
offset_top = -28.0
offset_right = 977.0
offset_bottom = 1023.0
mouse_filter = 2
color = Color(0.0470588, 0.423529, 0.792157, 1)

[node name="Whitemug" type="TextureRect" parent="."]
z_index = -101
layout_mode = 0
offset_left = 531.0
offset_top = 267.0
offset_right = 766.0
offset_bottom = 423.0
texture = ExtResource("4_bcxwf")
expand_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hv8pp")
}

[connection signal="pressed" from="Content/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="Content/OptionsButton" to="." method="open_options"]
[connection signal="pressed" from="Content/QuitButton" to="." method="quit"]
[connection signal="close" from="OptionsMenu" to="." method="close_options"]
